# open-gr-zh

./: README.md
analysis/: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  docker-compose.yaml  fly.toml  prototype.py  pyproject.toml  regex.md
analysis/app/: celery_app.py  main.py  models.py  tasks.py  utils.py  utils.py.bak  worker.py
analysis/app/api/: api.py
analysis/app/api/endpoints/: zh.py
analysis/app/core/: config.py
analysis/app/models/: __init__.py  meeting.py
analysis/app/providers/grzh/: api.py  responses.py
analysis/app/providers/grzh/schemas/: __init__.py  ablaufschritt.py  abstimmung.py  behoerdenmandat.py  departement.py  geschaeft.py  geschaeftsart.py  gremiumdetail.py  gremiumstyp.py  gremiumsuebersicht.py  kontakt.py  partei.py  pendentbei.py  referendum.py  sitzung.py  wahlkreis.py  wohnkreis.py
analysis/app/providers/grzh/schemas_gen/: __init__.py  ablaufschritt.py  abstimmung.py  behoerdenmandat.py  behoerdenmandat.xml  departement.py  geschaeft.py  geschaeftsart.py  gremiumdetail.py  gremiumstyp.py  gremiumsuebersicht.py  kontakt.py  partei.py  pendentbei.py  referendum.py  sitzung.py  wahlkreis.py  wohnkreis.py
analysis/app/schemas/: council.py  meeting.py
analysis/migrations/models/: 0_20220517125509_init.sql
analysis/provider_schemas/grzh/: ablaufschritt.xsd  abstimmung.xsd  behoerdenmandat.xsd  departement.xsd  geschaeft.xsd  geschaeftsart.xsd  gremiumdetail.xsd  gremiumstyp.xsd  gremiumsuebersicht.xsd  kontakt.xsd  partei.xsd  partei_search.xml  pendentbei.xsd  referendum.xsd  sitzung.xsd  wahlkreis.xsd  wohnkreis.xsd
